fix IndexControllerMvcTest.jumpToViewEmployees()